--- a/style.css
+++ b/style.css
@@ -125,10 +125,12 @@ input[type='number'] {
 
 .transactions li.plus {
   border-right: 5px solid #2ecc71;
+  color: #2ecc71;
 }
 
 .transactions li.minus {
   border-right: 5px solid #c0392b;
+  color: #c0392b;
 }
 
 .delete-btn {
